2004-08-09  Todd Berman  <tberman@off.net>

	* Services/SystemAssemblyService.cs: Work w/ cvs HEAD and 1.0.x

2004-08-07  Todd Berman  <tberman@off.net>

	* AssemblyInfo.cs.in: Use new ASSEMBLY_VERSION variable.

2004-07-28  Fawad Halim <fawad@fawad.net>

	* Services/File/DefaultFileService.cs: Added inner class FileInformation as a container for File Opening information. Overloaded OpenFile to accept a delegate to call after File Opening.
	* Services/File/IFileService.cs: Added a delegate FileOpeningFinished for use after File Opening.
	* Services/Tasks/Task.cs: Use OpenFile, having call OnFileOpened after completion.
	* Gui/Pads/ClassScout/ClassScout.cs: Use OpenFile on node activation, having call OnFileOpened after completion.

2004-07-12  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/NewProjectDialog.cs: catch an IOException when
	creating a project with the name of an existing file
	should fix bug #61034

2004-07-05  Todd Berman  <tberman@off.net>

	* Commands/MenuItemBuilders.cs: properly escape filename with
	underscores in them.

2004-07-05  Todd Berman  <tberman@off.net>

	* Gui/Pads/HelpBrowser/HelpViewer.cs: enable images in monodoc.

2004-07-05  Todd Berman  <tberman@off.net>

	* Internal/Codons/MenuItems/MenuItemCodon.cs: allow menuitems with
	a submenu to be translated properly.

2004-07-04  John Luke  <jluke@cfl.rr.com>

	* Gui/Dialogs/OptionPanels/ProjectOptions/DeployFileOptions.cs:
	* Gui/Pads/ProjectBrowser/ProjectBrowserView.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/AbstractBrowserNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/ReferenceNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/CombineBrowserNode.cs:
	* Gui/Pads/ProjectBrowser/BrowserNode/DirectoryNode.cs:   
	* Gui/Pads/ProjectBrowser/NodeBuilder/DefaultDotNetNodeBuilder.cs:
	* Internal/Project/Project/IncludeFilesDialog.cs:
	Use the MessageService everywhere, and cleanup these files a bit

2004-07-02  Todd Berman  <tberman@off.net>
