@@ -81,7 +81,7 @@ namespace MonoDevelop.Gui.Dialogs.OptionPanels
 				projectLocationTextBox.GtkEntry.Text = PropertyService.GetProperty(
 					"MonoDevelop.Gui.Dialogs.NewProjectDialog.DefaultPath", 
 					System.IO.Path.Combine(System.Environment.GetEnvironmentVariable ("HOME"),
-							"MonoDevelopProjects")).ToString();
+							"Projects")).ToString();
 				projectLocationTextBox.DirectoryEntry = true;
 				//
 				// setup the properties
